--- a/public/learnstyle.css
+++ b/public/learnstyle.css
@@ -86,18 +86,25 @@
     white-space: nowrap;
   }
   
-  .learn-beekeeping .login-button {
+  .learn-beekeeping .header .login-button button {
     display: flex;
-    width: 140px;
+    width: 150px;
     height: 55px;
     align-items: center;
     justify-content: center;
     gap: 10px;
+    font-weight: bold;
     padding: 10px;
     position: relative;
+    font-family: "Newsreader-SemiBold";
     background-color: #e5bcff;
-    border-radius: 4px;
-    box-sizing: border-box;
+    border: none;
+    font-size: 25px;
+  }
+
+  .learn-beekeeping .header .login-button button:hover {
+    cursor: pointer;
+    background-color: #e5e5;
   }
   
   .learn-beekeeping .text-wrapper-3 {
@@ -111,5 +118,18 @@
     letter-spacing: 0;
     line-height: normal;
     white-space: nowrap;
+  }
+  
+  .learn-beekeeping .header .navbar button {
+    background-color: white;
+    border: none;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-weight: bold;
+    font-size: 20px;
+    margin: 4px 2px;
+    cursor: pointer;
   }
   
