--- a/public/style.css
+++ b/public/style.css
@@ -149,15 +149,12 @@
 
 .home-page-desktop .div-wrapper {
   display: flex;
-  width: 220px;
+  width: 250px;
   height: 72px;
   align-items: center;
   justify-content: center;
-  gap: 10px;
-  padding: 10px;
   position: relative;
   background-color: #e5bcff;
-  border-radius: 4px;
 }
 
 .home-page-desktop .text-wrapper-3 {
@@ -173,20 +170,28 @@
   white-space: nowrap;
 }
 
-.home-page-desktop .button {
+.home-page-desktop .div-wrapper button {
   display: flex;
-  width: 220px;
+  width: 250px;
   height: 72px;
   align-items: center;
   justify-content: center;
-  gap: 10px;
-  padding: 10px;
   position: relative;
   background-color: #e5bcff;
-  border-radius: 4px;
-  all: unset;
-  box-sizing: border-box;
-}
+  border: none;
+  font-size: 25px;
+  font-weight: bold;
+  }
+
+  .home-page-desktop .div-wrapper button:hover {
+    cursor: pointer;
+    background-color: #e5e5;
+  }
+
+  .home-page-desktop .div-wrapper button:hover {
+    cursor: pointer;
+    background-color: #e5e5;
+  }
 
 .home-page-desktop .our-community {
   display: inline-flex;
@@ -265,17 +270,37 @@
   white-space: nowrap;
 }
 
-.login-button {
+.home-page-desktop .header .login-button button {
   display: flex;
-  width: 140px;
+  width: 150px;
   height: 55px;
   align-items: center;
   justify-content: center;
   gap: 10px;
+  font-weight: bold;
   padding: 10px;
   position: relative;
+  font-family: "Newsreader-SemiBold";
   background-color: #e5bcff;
+  border: none;
+  font-size: 25px;
+}
+
+.home-page-desktop .header .login-button button:hover {
+  cursor: pointer;
+  background-color: #e5e5;
+}
+
+
+.home-page-desktop .header .navbar button {
+  background-color: white;
+  border: none;
   color: black;
-  border-radius: 4px;
-  box-sizing: border-box;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-weight: bold;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
