--- a/beehive-app/src/Components/homepagestyle.css
+++ b/beehive-app/src/Components/homepagestyle.css
@@ -1,11 +1,3 @@
-.home-page-desktop {
-  background-color: #ffffff;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
-}
-
 .home-page-desktop .div {
   background-color: #ffffff;
   width: 1440px;
@@ -29,7 +21,7 @@
   height: 72px;
   top: 202px;
   left: 130px;
-  font-family: "Newsreader-SemiBold", Helvetica;
+  font-family: "Newsreader-SemiBold", serif;
   font-weight: 600;
   color: #ffffff;
   font-size: 72px;
@@ -43,7 +35,7 @@
   width: 578px;
   top: 274px;
   left: 130px;
-  font-family: "Newsreader-Regular", Helvetica;
+  font-family: "Newsreader-Regular", serif;
   font-weight: 400;
   color: #ffffff;
   font-size: 35px;
