connect server to esp32

--- a/beehive-app/src/Components/adoptpagestyle.css
+++ b/beehive-app/src/Components/adoptpagestyle.css
@@ -19,7 +19,7 @@
     height: 550px;
     top: 86px;
     left: 0;
-    background-image: url(./img/learn_beekeeping.png);
+    background-image: url(./img/adopt.png);
     background-size: 100% 100%;
   }
   
