--- a/beehive-app/src/Components/adoptpagestyle.css
+++ b/beehive-app/src/Components/adoptpagestyle.css
@@ -8,14 +8,14 @@
   
   .adopt-a-beehive-page .div {
     background-color: #ffffff;
-    width: 1440px;
+    width: 100%;
     height: 3200px;
     position: relative;
   }
   
   .adopt-a-beehive-page .overlap-group {
     position: absolute;
-    width: 1440px;
+    width: 100%;
     height: 550px;
     top: 86px;
     left: 0;
