--- a/beehive-app/src/Components/productpagestyle.css
+++ b/beehive-app/src/Components/productpagestyle.css
@@ -8,14 +8,14 @@
   
   .product-page-desktop .div {
     background-color: #ffffff;
-    width: 1440px;
+    width: 100%;
     height: 3200px;
     position: relative;
   }
   
   .product-page-desktop .overlap-group {
     position: absolute;
-    width: 1440px;
+    width: 100%;
     height: 550px;
     top: 86px;
     left: 0;
