--- a/beehive-app/src/Components/weighttrendpagestyle.css
+++ b/beehive-app/src/Components/weighttrendpagestyle.css
@@ -11,6 +11,11 @@
     animation: animate 0.3s;
   }
 
+  .modal-cont {
+    height: 100%;
+  }
+    
+
   .modal-buttons {
     display: flex;
     justify-content: space-between;
