--- a/beehive-app/src/Components/headerstyle.css
+++ b/beehive-app/src/Components/headerstyle.css
@@ -1,76 +1,70 @@
 .header {
-    display: inline-flex;
-    align-items: center;
-    gap: 153px;
-    position: absolute;
-    top: 15px;
-    left: 15px;
-    background-color: transparent;
+  position: absolute;
+  align-items: center;
+  justify-content: space-between;
+  display: flex;
+  flex: 0 0 auto;
+  top: 0px;
+  height: 100px;
+  background-color: rgb(255, 192, 246);
+  z-index: 1;
+  width: 100%;
 }
 
-  .FEC-logo {
-    position: relative;
-    width: 139px;
-    height: 55px;
-  }
+.FEC-logo {
+  position: relative;
+  width: 139px;
+  height: 55px;
+  margin-left: 15px;
+}
 
-  .navbar {
-    display: inline-flex;
-    align-items: flex-start;
-    gap: 40px;
-    position: relative;
-    flex: 0 0 auto;
-  }
-
-  .text-wrapper-4 {
-    position: relative;
-    width: fit-content;
-    margin-top: -1px;
-    font-family: "Newsreader-SemiBold", Helvetica;
-    font-weight: 600;
-    color: #000000;
-    font-size: 26px;
-    text-align: center;
-    letter-spacing: 0;
-    line-height: normal;
-    white-space: nowrap;
-  }
-  
-   .login-button {
-    display: flex;
-    width: 150px;
-    height: 55px;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    font-weight: bold;
-    padding: 8px;
-    position: relative;
-    font-family: "Newsreader-SemiBold";
-    background-color: #e5bcff;
-    border: none;
-    font-size: 25px;
-    text-decoration: none;
-  }
+.login-button {
+  display: flex;
+  width: 223px;
+  height: 100px;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  position: relative;
+  font-family: "Newsreader-SemiBold";
+  background-color: #e5bcff;
+  border: none;
+  font-size: 25px;
+  text-decoration: none;
+}
 
 .login-button:hover {
-    cursor: pointer;
-    background-color: #e5e5;
-  }
+  cursor: pointer;
+  background-color: #e5e5;
+}
 
-  .header .navbar a {
-    background-color: white;
-    border: none;
-    color: black;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-weight: bold;
-    font-size: 20px;
-    margin: 4px 35px;
-    cursor: pointer;
-  }
+.header a {
+  border: none;
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
+  cursor: pointer;
+  margin-top: -1px;
+  font-family: "Newsreader-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #000000;
+  letter-spacing: 0;
+  line-height: normal;
+  white-space: nowrap;
+}
 
-  .header a:visited, link:visited {
-    color: black;
-  }
+.header a:visited,
+link:visited {
+  color: black;
+}
+
+.header button {
+  background-color: rgb(255, 192, 246);
+  border: none;
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
+  cursor: pointer;
+}
