--- a/beehive-app/src/Components/dashboardstyle.css
+++ b/beehive-app/src/Components/dashboardstyle.css
@@ -136,3 +136,9 @@
   font-size: 25px;
   text-decoration: none;
 }
+
+.footer-instance {
+  margin-top: 1330px;
+  position: relative;
+  width: 100%;
+}
