--- a/beehive-app/src/Components/footerstyle.css
+++ b/beehive-app/src/Components/footerstyle.css
@@ -1,2 +1,44 @@
-
+.footer a {
+    color: white;
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    align-items: center; /* Align items vertically */
+    gap: 10px; /* Increased gap between icon and text */
+  }
   
+  .footer a:hover {
+    text-decoration: underline;
+  }
+  
+  .footer .footer-logo {
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .footer .footer-social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row; /* Adjusted to arrange icons horizontally */
+    gap: 20px; /* Increased gap between social media icons */
+    padding-bottom: -50px;
+  }
+  
+  .footer .footer-middle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(255, 192, 246);
+    width: 100%;
+    margin-top: 20px;
+  }
