--- a/beehive-app/src/Components/learnpagestyle.css
+++ b/beehive-app/src/Components/learnpagestyle.css
@@ -9,7 +9,6 @@
   .learn-beekeeping .div {
     background-color: #ffffff;
     width: 100%;
-    height: 3200px;
     position: relative;
   }
   
@@ -225,4 +224,10 @@
     text-align: center;
     letter-spacing: 0;
     line-height: 35px;
+  }
+
+  .footerr {
+    margin-top: 2130px;
+    position: relative;
+    width: 100%;
   }
