--- a/beehive-app/src/Components/mappagestyle.css
+++ b/beehive-app/src/Components/mappagestyle.css
@@ -1,17 +1,44 @@
-/* 
- * Always set the map height explicitly to define the size of the div element
- * that contains the map. 
- */
- #map {
-    height: 100%;
+  .contact-dropdown {
+    background-color: transparent;
+    border: none;
+    color: blue;
+    text-decoration: none;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    display: inline-block;
+    width: 100%;
   }
-  
-  /* 
-   * Optional: Makes the sample page fill the window. 
-   */
-  html,
-  body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+
+  .contact-dropdown-content {
+    display: none;
+    position: relative;
+    cursor: auto;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+
+  }
+
+  .contact-dropdown-content p {
+    color: black;
+    padding: 8px 12px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .contact-dropdown-content a:hover {
+    background-color: #f1f1f1;
+  }
+
+  /* Keep dropdown content visible after hovering */
+  .contact-dropdown:hover .contact-dropdown-content {
+    display: block;
+  }
+
+  /* Display dropdown content when hovering over it */
+  .contact-dropdown-content:hover {
+    display: block;
   }
