--- a/beehive-app/src/Components/memberheaderstyle.css
+++ b/beehive-app/src/Components/memberheaderstyle.css
@@ -36,12 +36,12 @@
   
   .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 12px 4px;
     text-decoration: none;
     display: block;
   }
   
-  .dropdown-content a:hover {
+  .dropdown-content a:focus {
     background-color: #f1f1f1;
   }
   
