--- a/beehive-app/src/Components/productpagestyle.css
+++ b/beehive-app/src/Components/productpagestyle.css
@@ -8,7 +8,7 @@
   
   .product-page-desktop .div {
     background-color: #ffffff;
-    width: 1440px;
+    width: 100%;
     position: relative;
   }
   
