--- a/beehive-app/src/Components/adopthomepagestyle.css
+++ b/beehive-app/src/Components/adopthomepagestyle.css
@@ -1,9 +1,19 @@
-.adopt-a-beehive-page {
-    background-color: #ffffff;
-    width: 100%;
-  }
+.adopt-home {
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
+
+.adopt-home .div {
+  background-color: #ffffff;
+  width: 100%;
+  position: relative;
+}
   
-  .adopt-a-beehive-page .overlap-group {
+  
+  .adopt-home .overlap-group {
     position: absolute;
     width: 100%;
     height: 550px;
@@ -13,7 +23,7 @@
     background-size: 100% 100%;
   }
   
-  .adopt-a-beehive-page .text-wrapper {
+  .adopt-home .text-wrapper {
     position: absolute;
     width: 578px;
     height: 72px;
@@ -29,7 +39,7 @@
     text-align: center;
   }
   
-  .adopt-a-beehive-page .rectangle {
+  .adopt-home .rectangle {
     position: absolute;
     width: 100%;
     height: 222px;
@@ -38,7 +48,7 @@
     background-color: #d9d9d9;
   }
 
-  .adopt-a-beehive-page .rectangle {
+  .adopt-home .rectangle {
     position: absolute;
     width: 550px;
     height: 450px;
@@ -46,7 +56,7 @@
     left: 130px;
   }
   
-  .adopt-a-beehive-page .frame {
+  .adopt-home .frame {
     display: inline-flex;
     flex-direction: column;
     align-items: center;
@@ -56,7 +66,7 @@
     left: 730px;
   }
   
-  .adopt-a-beehive-page .one-hive {
+  .adopt-home .one-hive {
     display: inline-flex;
     flex-direction: column;
     align-items: center;
@@ -65,7 +75,7 @@
     flex: 0 0 auto;
   }
   
-  .adopt-a-beehive-page .div-2 {
+  .adopt-home .div-2 {
     display: inline-flex;
     flex-direction: column;
     align-items: flex-start;
@@ -73,7 +83,7 @@
     flex: 0 0 auto;
   }
   
-  .adopt-a-beehive-page .heading {
+  .adopt-home .heading {
     position: relative;
     width: 580px;
     margin-top: 0;
@@ -87,7 +97,7 @@
     line-height: normal;
   }
   
-  .adopt-a-beehive-page .body {
+  .adopt-home .body {
     position: relative;
     width: 580px;
     margin-top: 0;
@@ -100,7 +110,7 @@
     line-height: 35px;
   }
   
-  .adopt-a-beehive-page .div-wrapper {
+  .adopt-home .div-wrapper {
     display: flex;
     width: 250px;
     height: 72px;
@@ -111,7 +121,7 @@
     margin: 0 auto
   }
 
-  .adopt-a-beehive-page .div-wrapper a {
+  .adopt-home .div-wrapper a {
     display: flex;
     width: 250px;
     height: 72px;
@@ -126,12 +136,12 @@
     color:black;
     }
   
-    .adopt-a-beehive-page .div-wrapper a:hover {
+    .adopt-home .div-wrapper a:hover {
       cursor: pointer;
       background-color: #e5e5;
     }
 
-  .adopt-a-beehive-page .frame-5 {
+  .adopt-home .frame-5 {
     align-items: flex-start;
     display: inline-flex;
     flex: 0 0 auto;
@@ -139,7 +149,7 @@
     position: relative;
   }
 
-  .adopt-a-beehive-page .text-wrapper-6 {
+  .adopt-home .text-wrapper-6 {
     color: #000000;
     font-family: "Newsreader-SemiBold";
     font-size: 26px;
@@ -152,7 +162,7 @@
     width: fit-content;
   }
 
-  .adopt-a-beehive-page .contribute {
+  .adopt-home .contribute {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -166,7 +176,7 @@
     margin: auto; /* added to center the block */
   }
   
-  .adopt-a-beehive-page .real-time-stats {
+  .adopt-home .real-time-stats {
     align-items: flex-start;
     display: flex;
     flex-direction: column;
@@ -176,7 +186,7 @@
     margin: 0 auto; /* Add this line */
   }
 
-  .adopt-a-beehive-page .heading-2 {
+  .adopt-home .heading-2 {
     color: #000000;
     font-family: "Newsreader-SemiBold";
     font-size: 45px;
@@ -192,7 +202,7 @@
     margin-bottom: 0;
   }
   
-  .adopt-a-beehive-page .body-2 {
+  .adopt-home .body-2 {
     color: var(--collection-1-dark-grey);
     font-family: "Newsreader-Regular";
     font-size: 25px;
@@ -206,7 +216,7 @@
     margin-bottom: 0;
   }
 
-  .adopt-a-beehive-page .learn-more-button {
+  .adopt-home .learn-more-button {
     align-items: center;
     background-color: #e5bcff;
     border-radius: 4px;
