--- a/beehive-app/src/Components/headerstyle.css
+++ b/beehive-app/src/Components/headerstyle.css
@@ -68,3 +68,24 @@ link:visited {
   font-size: 20px;
   cursor: pointer;
 }
+
+.cart-count {
+  position: absolute;
+  top: 25px;
+  right: 320px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+}
+
+.cart-icon {
+  position: relative;
+  width: 20px;
+  height: 20px;
+}
