Cart page finished

--- a/beehive-app/src/Components/cartpagestyle.css
+++ b/beehive-app/src/Components/cartpagestyle.css
@@ -43,7 +43,7 @@ input[type='number'] {
 }
 
 .checkout-btn {
-  background-color: #007bff;
+  background-color: #e5bcff;
   color: #fff;
   padding: 10px 20px;
   border: none;
