--- a/beehive-app/src/Components/humidtrendpagestyle.css
+++ b/beehive-app/src/Components/humidtrendpagestyle.css
@@ -8,7 +8,7 @@
     justify-content: center;
     border-radius: 5px;
     position: relative;
-    animation: animate 0.3s;
+    /* animation: animate 0s; */
   }
 
   .modal-buttons {
