--- a/beehive-app/src/Components/temptrendpagestyle.css
+++ b/beehive-app/src/Components/temptrendpagestyle.css
@@ -7,7 +7,7 @@
     justify-content: center;
     border-radius: 5px;
     position: relative;
-    animation: animate 0.3s;
+    /* animation: animate 0.3s; */
   }
 
   .modal-cont {
